--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Developer Page</title>
   </head>
   <body>
-    <p>Welcome to Developer Page</p>
+    <p>Welcome to Developer Page, new changes</p>
   </body>
 </html>
